doc: update jedis test guide.